# weather

./: .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  LICENSE
cmake/: QtAutoGeneration.cmake
source/: CMakeLists.txt
source/app/: CMakeLists.txt  main.cpp
source/controller/: CMakeLists.txt
source/controller/animation-config/: CMakeLists.txt  animation-config.cpp  animation-config.hpp
source/controller/animation-speed-controller/: CMakeLists.txt  animation-speed-controller.cpp  animation-speed-controller.hpp
source/controller/forecast-card/: CMakeLists.txt  forecast-card.cpp  forecast-card.hpp
source/controller/theme/: CMakeLists.txt  theme.cpp  theme.hpp
source/controller/theme-config/: CMakeLists.txt  theme-config.cpp  theme-config.hpp
source/controller/theme-controller/: CMakeLists.txt  theme-controller.cpp  theme-controller.hpp
source/controller/user-config/: CMakeLists.txt  user-config.cpp  user-config.hpp
source/interface/: iconfig.hpp  ierror-emitter.hpp  ipath.hpp  isjon-serializable.hpp  iweather-forecast-api.hpp
source/internal/: CMakeLists.txt
source/internal/opengl/: CMakeLists.txt
source/manager/: CMakeLists.txt
source/manager/theme-manager/: CMakeLists.txt  theme-manager.cpp  theme-manager.hpp
source/model/: CMakeLists.txt
source/model/animation-config/: CMakeLists.txt  animation-config.cpp  animation-config.hpp
source/model/animation-speed-model/: CMakeLists.txt  animation-speed-model.cpp  animation-speed-model.hpp
source/model/forecast-card-list/: CMakeLists.txt  (+2 more)
source/service/: CMakeLists.txt
source/utils/: CMakeLists.txt
ui/: qml.qrc
ui/components/: ForecastPanel.qml  HourlyForecastPanel.qml  SettingsIcon.qml  SettingsPanel.qml  WeatherHourlyWidget.qml
ui/main-window/: MainWindow.qml
(+73 files in other folders)
